--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,6 +8,11 @@
       <div class="mt-3">
         <input type="password" name="password" placeholder="Password" class="form-control" required>
       </div>
+      {{#if error}}
+      <div class="alert alert-danger my-3" role="alert">
+        {{ error }}
+      </div>
+      {{/if}}
       <div class="d-flex justify-content-center">
         <button class="btn btn-outline-dark mt-3" type="submit">Sign in</button>
       </div>
